[metadata]
name = desitransfer
version = attr: desitransfer.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD 3-Clause License
license_files = LICENSE.rst
url = https://github.com/desihub/desitransfer
description = DESI data transfer infrastructure.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/desitransfer
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir =
    =py
packages = find:
include_package_data = True
python_requires = >=3.9
# setup_requires = setuptools_scm
install_requires =
    requests
    pytz
scripts =
    bin/desi_checksum_audit.sh
    bin/desi_common_init.sh
    bin/desi_daily_transfer
    bin/desi_nightwatch_init.sh
    bin/desi_nightwatch_transfer
    bin/desi_recover_lost+found.sh
    bin/desi_spacewatch_transfer
    bin/desi_spectro_data_unpack.sh
    bin/desi_transfer_daemon
    bin/desi_transfer_init.sh
    bin/desi_transfer_statistics.sh
    bin/desi_transfer_status
    bin/desi_transfer_status_restore
    bin/desi_tucson_transfer
    bin/desi_tucson_transfer_catchup.sh

# [options.entry_points]
# console_scripts =
#     desi_daily_transfer = desitransfer.daily:main
#     desi_nightwatch_transfer = desitransfer.nightwatch:main
#     desi_spacewatch_transfer = desitransfer.spacewatch:main
#     desi_transfer_daemon = desitransfer.daemon:main
#     desi_transfer_status = desitransfer.status:main
#     desi_tucson_transfer = desitransfer.tucson:main

[options.extras_require]
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

[options.package_data]
desitransfer = data/*
desitransfer.test = t/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/desitransfer
omit =
    py/desitransfer/_version.py
    py/desitransfer/conftest*
    py/desitransfer/test/*
    */desitransfer/_version.py
    */desitransfer/conftest*
    */desitransfer/test/*

# [coverage:paths]
# source =
#     py/desitransfer/
#     */site-packages/desitransfer/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# These are the explicitly ignored styles:
# - E501: line too long (82 > 79 characters)
# - W504: line break after binary operator
ignore = E501, W504
